[tool.poetry]
name = "syinterferopy"
version = "0.1.0"
description = ""
authors = ["M. E. Gaddes <eemeg@leeds.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "3.3.4"
numpy = "1.19.5"
scipy = "1.5.4"
geopy = "2.2.0"
Shapely = "1.8.0"
pyshp = "2.2.0"
netCDF4 = "1.5.8"
wget = "3.2"

[tool.poetry.dependencies.srtm-dem-tools]
git = "https://github.com/bozso/SRTM-DEM-tools"
rev = "375dd8d1b8940ac7b6daa6f4a3a69912e4e1f4d7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
